--- a/worblehat-web/src/main/resources/messages.properties
+++ b/worblehat-web/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-noBookExists = There is no book with this ISBN.
-noBorrowableBooks = The book is already borrowed.
-duplicateIsbn = A book with this ISBN already exists.
-internalError = An internal error occurred.
+noBookExists = There is no book with this ISBN. (please try another ISBN)
+noBorrowableBooks = Sorry! This book is already borrowed.
+duplicateIsbn = A book with this ISBN already exists (please try another ISBN). 
+internalError = An internal error occurred. (please contact our Support 0123456787)
